<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/Blanco"
    tools:context="com.rd.dmmr.tutosearch.Login">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDarkLgn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/Blanco"
                android:textStyle="bold" />

            <View
                android:id="@+id/lgnView"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/txtTituloApp"
                android:layout_margin="@dimen/margin_short"
                android:background="@color/Blanco"
                android:padding="@dimen/margin_default" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/lgnSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:auto_cycle="true"
                app:delay="0"
                app:period="4000"
                app:corner_radius="20"
                android:layout_below="@+id/lgnView"
                app:placeholder="@drawable/bg_grey"
                app:error_image="@drawable/bg_grey"
                />




        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:background="@color/Blanco"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/margin_short"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electr_nico"
                    android:paddingBottom="18dp"
                    android:textSize="@dimen/_15sdp"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:paddingBottom="18dp"
                    android:textSize="@dimen/_15sdp" />


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_short"
                android:padding="@dimen/margin_short"
                android:gravity="center"
                android:weightSum="2">




                <Button
                    android:id="@+id/btnRegistroLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Registrarse"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_short"
                    android:backgroundTint="@color/GrisParaTexto"
                    android:background="@drawable/cornered_button"/>

                <Button
                    android:id="@+id/btnEntrarLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_short"
                    android:text="Entrar"
                    android:background="@drawable/cornered_button"
                    android:textColor="@color/Blanco"/>



            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="He olvidado mi contraseña"
                android:textColor="@color/colorAccentLgn"

                android:textSize="@dimen/_12sdp"/>


        </LinearLayout>







    </LinearLayout>



</ScrollView>

